fix height spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,16 @@ h1 {
     .school-logo {
       width: 10%;
     }
+    .nuc-container {
+      width: 70%;
+    }
   }
   
   @media only screen and (max-width: 600px) {
     .school-logo {
       width: 12%;
+    }
+    .nuc-container {
+      width: 80%;
     }
   }
